# envloom

./: .gitattributes  .gitignore  CHANGELOG.md  FEATURES.md  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/config/mariadb/: my.cnf
src-tauri/config/php/: 8.5.ini  php.ini
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: logging.rs  mod.rs  persistence.rs
src/components/icons/: laravel.tsx  livewire.tsx  node.tsx  php.tsx  react.tsx  svelte.tsx
src/components/ui/: skeleton.tsx
src/features/dashboard/: app-sidebar.tsx  data.ts  overview-cards.tsx  runtimes-and-projects.tsx  services-api.ts  services-card.tsx  top-header.tsx
src/features/logs/: logs-api.ts  logs-page.tsx
src/features/runtimes/: api.ts  mariadb-api.ts  mariadb-page.tsx  node-api.ts  node-page.tsx  php-api.ts  runtime-layout.tsx  runtime-placeholder.tsx  runtimes-page.tsx
src/features/settings/: settings-api.ts  settings-page.tsx
src/features/sites/: sites-api.ts  sites-page.tsx
